[package]
name = "jsonschema-valid"
version = "0.5.0"
authors = ["Michael Droettboom <mdroettboom@mozilla.org>"]
description = "A simple JSON schema validator."
repository = "https://github.com/mdboom/jsonschema-valid"
readme = "README.md"
keywords = ["jsonschema"]
license = "MPL-2.0"
edition = "2018"

[dependencies]
serde_json = "1.0"
lazy_static = "1.1"
itertools = "0.10.3"
regex = { version = "1.6.0", default-features = false, features = ["std"] }
url = "2.1"
chrono = "0.4"
iri-string = "0.5.5"
json-pointer = "0.3"
percent-encoding = "2.1.0"
textwrap = "0.15.0"
